--- a/webdesign.html
+++ b/webdesign.html
@@ -1,11 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <title>Product Page :: Built With Twitter Bootstrap</title>
 
+        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css"
+        rel="stylesheet">
 
-    </head>
+        <!-- <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css"
+        rel="stylesheet"> -->
 
-    <body>
+        <style>
         
+            body{
+                padding-top: 50px;
+            }
+
+        </style>
+
+        
+    </head>
+    <body>
+
+        <!-- NAVBAR -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" id="main-navbar" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>                    
+                    </button>                
+                    <a href="index.html" class="navbar-brand">Product Name</a>
+                </div> <!--end Navbar header-->
+
+                <div class="collapse navbar-collapse" id="navbar-collapse">
+                   <a href="#" class="btn btn-success navbar-btn navbar-right">BUY NOW</a>
+                    <ul class="nav navbar-nav">
+                        <li><a href="#section-testimonials">Testimonials</a></li>
+                        <li><a href="#section-gallery">Gallery</a></li>
+                        <li><a href="#section-feaures">Features</a></li>
+                        <li><a href="#section-f.a.q">F.A.Q</a></li>
+                        <li><a href="#section-contact">Contact</a></li>
+                    </ul>
+                </div><!--end collapse-->
+            </div><!--end container -->
+        </nav>
+
+        <!-- BANNER -->
+
+        <div class="jumbotron">
+            <div class="container text-center">
+                <h1>Great Product Title</h1>
+                <p>Description Paragraph</p>
+                <div class="btn-group">
+                    <a href="#" class="btn btn-lg btn-success">BUY NOW</a>
+                    <a href="#" class="btn btn-lg btn-default">TRY IT FREE</a>
+                </div>
+            </div><!--end container-->
+        </div><!--end jumbotron-->
+
+        <script src="http://code.jquery.com/jquery-2.1.0.min.js."></script>      
+        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>  
     </body>
 </html>
