Testimonials and Features

--- a/webdesign.html
+++ b/webdesign.html
@@ -61,6 +61,108 @@
             </div><!--end container-->
         </div><!--end jumbotron-->
 
+        <div class="container">
+            <!-- TESTIMONIAL -->
+            <section>
+                <div class="page-header" id="section-testimonials">
+                    <h1>Testimonials. <small> This is what our customers are saying about us.</small></h1>
+                </div><!-- page header ends here -->
+    
+                <div class="row">
+                    <div class="col-lg-4">
+                        <blockquote>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. </p>
+                            <footer>Site Author</footer>
+                        </blockquote>
+                    </div>
+                    <div class="col-lg-4">
+                        <blockquote>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. </p>
+                            <footer>Site Author</footer>
+                        </blockquote>
+                    </div>
+                    <div class="col-lg-4">
+                        <blockquote>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. </p>
+                            <footer>Site Author</footer>
+                        </blockquote>
+                    </div>
+                </div><!-- end row -->
+                <p class="text-center"><em>If you have any thing to say about the product, hit the contact form.</em></p>
+                <p class="text-center"><a href="#section-contact" class="btn btn-default">Contact Us</a></p>
+            </section>
+
+            <section>
+                <div class="page-header" id="section-features">
+                    <h2>Features. <small>What it is all about. </small></h2>
+                </div><!-- end page header -->
+
+                <div class="row">
+                    <div class="col-lg-8">
+                        <h3>This is a feature title.</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="images/Lighthouse.jpg" alt="Feature image" class="img-responsive">
+                    </div>                    
+                </div><!-- end row -->
+
+                <div class="row">
+                    <div class="col-lg-8">
+                        <h3>This is a feature title.</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="images/Koala.jpg" alt="Feature image" class="img-responsive">
+                    </div>                    
+                </div><!-- end row -->
+
+                <div class="row">
+                    <div class="col-lg-8">
+                        <h3>This is a feature title.</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="images/Penguins.jpg" alt="Feature image" class="img-responsive">
+                    </div>                    
+                </div><!-- end row -->
+
+                <hr>
+
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="panel panel-default text-center">
+                            <div class="panel-body">
+                                <span class="glyphicon glyphicon-search"></span>
+                                <h4>This is a smaller feature</h4>
+                                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="panel panel-default text-center">
+                            <div class="panel-body">
+                                <span class="glyphicon glyphicon-ok"></span>
+                                <h4>This is a smaller feature</h4>
+                                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="panel panel-default text-center">
+                            <div class="panel-body">
+                                <span class="glyphicon glyphicon-time"></span>
+                                <h4>This is a smaller feature</h4>
+                                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
+        </div><!-- end container -->
+
         <script src="http://code.jquery.com/jquery-2.1.0.min.js."></script>      
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>  
     </body>
