--- a/webdesign.html
+++ b/webdesign.html
@@ -158,10 +158,69 @@
                         </div>
                     </div>
                 </div>
-
             </section>
-
         </div><!-- end container -->
+
+        <!-- TRIAL -->
+        <section>
+            <div class="well">
+                <div class="container text-center">
+                    <h3>Subscribe now for a 30 days free trial!</h3>
+                    <p>Enter your name and email below</p>
+
+                    <form action="" class="form-inline" role="form">
+                        <div class="form-group">
+                            <label for="subscribe-name" class="sr-only">Name</label>
+                            <input type="text" class="form-control" id="subscribe-name" placeholder="Name">
+                        </div><!-- end form group -->
+                        <div class="form-group">
+                            <label for="subscribe-email" class="sr-only">Email Address</label>
+                            <input type="email" class="form-control" id="subscribe-name" placeholder="Email">
+                        </div><!-- end form group -->
+                        <button type="submit" class="btn btn-default">Subscribe</button>
+                        <p><small><em>We will only use your email address for sending the download link</em></small></p>
+                    </form>                    
+                </div><!-- end container -->
+            </div><!-- end well-->
+        </section>
+
+        <div class="container">
+            <!-- GALLERY -->
+            <section>
+                <div class="page-header" id="section-gallery">
+                    <h2>Gallery. <small> Take a look at some application screenshots. </small></h2>
+                </div><!-- end page header -->
+
+                <div class="carousel slide" id="gallery-carousel" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#gallery-carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#gallery-carousel" data-slide-to="1"></li>
+                        <li data-target="#gallery-carousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <img src="images/Hydrangeas.jpg" alt="Slider image">
+                            <div class="carousel-caption">This is a caption.</div>
+                        </div> 
+                        <div class="item">
+                            <img src="images/Desert.jpg" alt="Slider image">
+                            <div class="carousel-caption">This is a caption.</div>
+                        </div> 
+                        <div class="item">
+                            <img src="images/Chrysanthemum.jpg" alt="Slider image">
+                            <div class="carousel-caption">This is a caption.</div>
+                        </div>                        
+                    </div><!-- end carousel inner -->
+                    <a href="#gallery-carousel" class="left carousel-control" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a href="#gallery-carousel" class="right carousel-control" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
+                </div><!-- end carousel -->
+            </section>
+        </div>
 
         <script src="http://code.jquery.com/jquery-2.1.0.min.js."></script>      
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>  
