Q&A plus contact form

--- a/webdesign.html
+++ b/webdesign.html
@@ -220,9 +220,115 @@
                     </a>
                 </div><!-- end carousel -->
             </section>
-        </div>
 
-        <script src="http://code.jquery.com/jquery-2.1.0.min.js."></script>      
+            <!-- F.A.Q -->
+            <section>
+                <div class="page-header" id="section-f.a.q">
+                    <h2>Frequently Asked Questions. <small> A little Q&amp;A to get you started </small></h2>
+                </div><!-- end page header -->
+                <div class="panel-group" id="accordion-qa">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title"><a href="#qa-1" data-toggle="collapse" data-parent="#accordion-qa">Question 1</a></h4>
+                        </div><!-- end panel heading -->
+                        <div class="panel-collapse collapse in" id="qa-1">
+                            <div class="panel-body">
+                                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                            </div>
+                        </div><!-- end panel collapse-->
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title"><a href="#qa-2" data-toggle="collapse" data-parent="#accordion-qa">Question 2</a></h4>
+                        </div><!-- end panel heading -->
+                        <div class="panel-collapse collapse" id="qa-2">
+                            <div class="panel-body">
+                                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                            </div>
+                        </div><!-- end panel collapse-->
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title"><a href="#qa-3" data-toggle="collapse" data-parent="#accordion-qa">Question 3</a></h4>
+                        </div><!-- end panel heading -->
+                        <div class="panel-collapse collapse" id="qa-3">
+                            <div class="panel-body">
+                                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                            </div>
+                        </div><!-- end panel collapse-->
+                    </div>
+
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title"><a href="#qa-4" data-toggle="collapse" data-parent="#accordion-qa">Question 4</a></h4>
+                        </div><!-- end panel heading -->
+                        <div class="panel-collapse collapse" id="qa-4">
+                            <div class="panel-body">
+                                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                            </div>
+                        </div><!-- end panel collapse-->
+                    </div>
+
+                </div>
+            </section>
+
+            <!-- CONTACT -->
+            <section>
+                <div class="page-header" id="section-contact">
+                    <h2>Contact Us. <small>Let us get in touch.</small></h2>
+                </div><!-- end page header -->
+                <div class="row">
+                    <div class="col-lg-4">
+                        <p> To send us a message, use the contact form or the information below.</p>
+
+                        <address>
+                            <strong>Jachrix Group</strong><br>
+                            40 Adeola Odekun Street<br>
+                            Victoria Island Lagos<br>
+                            <abbr title="Phone">P: </abbr> +234(070) 6128 9791
+                        </address>
+                    </div>
+                    <div class="col-lg-8">
+                        <form action="#" class="form-horizontal" role="form">
+                            <div class="form-group">
+                                <label for="contact-name" class="col-lg-2 control-label">Name</label>
+                                <div class="col-lg-10">
+                                    <input type="text" class="form-control" id="contact-name" placeholder="Name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="contact-email" class="col-lg-2 control-label">Email Address</label>
+                                <div class="col-lg-10">
+                                    <input type="email" class="form-control" id="contact-email" placeholder="Email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="contact-website" class="col-lg-2 control-label">Website</label>
+                                <div class="col-lg-10">
+                                    <input type="url" class="form-control" id="contact-website" placeholder="Website">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="contact-message" class="col-lg-2 control-label">Message</label>
+                                <div class="col-lg-10">
+                                    <textarea name="contact-message" id="contact-message" class = "form-control" cols="30" rows="10" placeholder="Message"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-lg-10 col-lg-offset-2">
+                                    <button type="submit" class="btn btn-primary">Send Message</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+            </section>
+        </div><!-- end container -->
+
+        <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>      
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>  
     </body>
 </html>
